# llreve

./: .clang-tidy  .cncc.style  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Vagrantfile
cpp-example/: .clang-format  AnnotStackPass.cpp  CMakeLists.txt  Example.cpp  README.md  UniqueNamePass.cpp  check.sh  example.cpp  example.h
cpp-example/include/: AnnotStackPass.h  Example.h  UniqueNamePass.h
reve/: .clang-format  .dir-locals.el  ADCE.cpp  AnnotStackPass.cpp  Assignment.cpp  CFGPrinter.cpp  CFGPrinter.h  CMakeLists.txt  CMakeLists.txt.in  ConstantProp.cpp  Helper.cpp  InlinePass.cpp  InstCombinePass.cpp  Invariant.cpp  MarkAnalysis.cpp  Mem2Reg.cpp  Memory.cpp  PathAnalysis.cpp  Program.cpp  README.md  RemoveMarkPass.cpp  Reve.cpp  SExpr.cpp  SExpr.h  SMT.cpp  SMT.h  SMTGeneration.cpp  SplitEntryBlockPass.cpp  UnifyFunctionExitNodes.cpp  UniqueNamePass.cpp  bench.sh  bench_z3.sh  bootstrap.sh  check.sh  reve.org
reve-test-suite/: LICENSE  config.yaml  reve-test-suite.cabal  stack.yaml
reve-test-suite/app/: Main.hs
reve-test-suite/src/: Config.hs  Options.hs  Process.hs  Types.hs  Workers.hs
reve/docker/: Dockerfile  build_static.sh
reve/dynamic/: patterns
reve/dynamic/interpreter/: CMakeLists.txt  nuxmv.sh
reve/dynamic/invariants/: heap  invariants.hs  libc  loop  rec
reve/dynamic/llreve-dynamic/: CMakeLists.txt  nuxmv.sh
reve/dynamic/nuxmv/: horn.xmv
reve/dynamic/patterns/: looppatterns
reve/examples/: README  a_1.bc  a_1.manual.smt2  a_1.source.smt2  a_1_mr.bc  a_1_mr.ll  a_2_mr.bc  process.sh
reve/examples/argon2/: fill_memory_blocks_0.c  fill_memory_blocks_2.c  fill_memory_blocks_3.c  finalize_1.c
reve/examples/bitvect/: andmod_1.c  andmod_2.c  barthe2-big_1.c  loop2_1.c  loop2_2.c  loop_1.c  shift_bit_1.c  shift_bit_2.c
reve/examples/coreutils/: md5sum_1.c  remove_2.c  set_owner_1.c
reve/examples/discuss/: loop3_counter.smt2  problems.org  sum_manual.smt2
reve/examples/faulty/: ackermann!_1.c  add-horn!_2.c  barthe!_1.c  barthe!_2.c  inlining!_2.c  limit2!_1.c  loop5!_1.c  loop5!_2.c  nested-while!_1.c
reve/examples/float/: average_1.c  average_2.c  loop_1.c  loop_2.c
reve/examples/git/: invalid_attr_name_2.c  swap_1.c  swap_2.c
reve/examples/heap/: clearstr_1.c  cocome2_1.c  cocome2_2.c  fib_1.c  fib_2.c  findmax_1.c  heap_call_1.c  heap_call_2.c  memcpy_a_1.c  memcpy_b_1.c  memcpy_b_2.c  propagate_1.c  propagate_2.c  selsort_1.c  selsort_2.c  swaparray_2.c
reve/examples/libc/: memccpy_1_1.c  memccpy_1_2.c  memmem_1_1.c  memrchr_1_1.c  memrchr_1_2.c  memset_1_1.c  sbrk_1_1.c  sbrk_1_2.c  stpcpy_1_2.c  strcspn_2.c  strcspn_2_1.c  strcspn_2_2.c  strcspn_3_2.c  strncasecmp_1_1.c  strncasecmp_1_2.c  strncmp_1_2.c  strncmp_2_2.c  swab_1.c  swab_2.c
reve/examples/linux/: linux_1.c  linux_2.c
reve/examples/loop/: barthe2-big2_1.c  barthe2-big2_2.c  barthe2-big3_1.c  barthe2-big3_2.c  barthe2-big_1.c  barthe2-big_2.c  barthe2_1.c  barthe2_2.c  barthe_1.c  barthe_2.c  break_1.c  break_single_1.c  digits10_inl_1.c  fib_2.c  loop2_1.c  loop3_1.c  loop3_2.c  simple-loop_1.c  simple-loop_2.c  upcount_1.c  upcount_2.c  while_after_while_if_1.c
reve/examples/misc/: cube_square_1.c  cube_square_2.c  eq_1.c  eq_2.c  lookuptable_1.c  lookuptable_2.c  no_args_1.c  square_twice_1.c
reve/examples/rec/: cocome1_1.c  cocome1_2.c  inlining_2.c  loop_rec_1.c  loop_rec_2.c  rec_while_1.c  triangular_1.c  triangular_2.c
reve/examples/redis/: undoconnect_1.c  undoconnect_2.c
reve/examples/reducers/: avg.smt2  avg_1.c  avg_2.c  dis.smt2  dis_1.c  dis_2.c  sep_1.c  sep_2.c
reve/examples/stack/: gcd.c.rec.c  gcd1.c.rec.c  stack_1.c
reve/examples/strichmann/: gcd.c.rec.c  gcd1.c.rec.c
reve/examples/voting/: anonymity_1.c  anonymity_2.c  mono.smt2  mono_1.c  mono_2.c
reve/include/: ADCE.h  AnnotStackPass.h  Assignment.h  Compat.h  Helper.h  InlinePass.h  InstCombine.h  Invariant.h  MarkAnalysis.h  Mem2Reg.h  Memory.h  MonoPair.h  PathAnalysis.h  Program.h  RemoveMarkPass.h  RemoveMarkRefsPass.h  Reve.h  SExpr.h  SMT.h  SMTGeneration.h  UnifyFunctionExitNodes.h  UniqueNamePass.h
reve/opensuse/: Vagrantfile  bootstrap.sh  build.sh  build_static.sh
reve/reve/: .dir-locals.el  .ycm_extra_conf.py  ADCE.cpp  Assignment.cpp  CMakeLists.txt  Compile.cpp  ConstantProp.cpp  Doxyfile  FunctionSMTGeneration.cpp  Helper.cpp  InlinePass.cpp  Invariant.cpp  Memory.cpp  ModuleSMTGeneration.cpp  Opts.cpp  PathAnalysis.cpp  Preprocess.cpp  Program.cpp  README.md  Reve.cpp  SMT.cpp  SMTGeneration.cpp  UniqueNamePass.cpp  check.sh  llreve.py
reve/reve-test-suite/: config.yaml  reve-test-suite.cabal  stack.yaml
reve/reve-test-suite/app/: Main.hs
reve/reve-test-suite/src/: Config.hs  Orphans.hs  Output.hs  Process.hs  Workers.hs
reve/reve/cllib/: CommandLine.cpp  CommandLine.h
reve/reve/debug/: out.smt2  z3_output.smt2  z3_output_2.smt2
reve/reve/include/: AnalysisResults.h  AnnotStackPass.h  Assignment.h  CFGPrinter.h  Compat.h  Compile.h  ConstantProp.h  Declaration.h  FixedAbstraction.h  FreeVariables.h  FunctionSMTGeneration.h  Helper.h  InferMarks.h  InlinePass.h  InstCombine.h  Invariant.h  Logging.h  MarkAnalysis.h  Memory.h  ModuleSMTGeneration.h  MonoPair.h  Opts.h  PathAnalysis.h  Peel.h  Preprocess.h  Program.h  RemoveMarkPass.h  RemoveMarkRefsPass.h  Reve.h  SExpr.h  SMT.h  SMTGeneration.h  Serialize.h  Slicing.h  SplitEntryBlockPass.h  Type.h  UnifyFunctionExitNodes.h  UniqueNamePass.h  Unroll.h
reve/reve/lib/: AnalysisResults.cpp  AnnotStackPass.cpp  Assignment.cpp  CFGPrinter.cpp  Compile.cpp  Declaration.cpp  FixedAbstraction.cpp  FreeVariables.cpp  FunctionSMTGeneration.cpp  Helper.cpp  InferMarks.cpp  InlinePass.cpp  InstCombinePass.cpp  Invariant.cpp  MarkAnalysis.cpp  Mem2Reg.cpp  Memory.cpp  Opts.cpp  (+17 more)
reve/ubuntu/: Vagrantfile
reve/vagrant/: Vagrantfile  bootstrap.sh  build.sh  build_static.sh
reve/version/: CMakeLists.txt
slicing/src/: CMakeLists.txt  catch.hpp  main.cpp  test.cpp
smt-conv/: .gitignore  README.md  smt-conv.cabal  stack.yaml
smt-conv/src/: AST.hs  Main.hs  Parser.hs  Simplify.hs
(+507 files in other folders)
