name:                reve-test-suite
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/cocreature/reve-test-suite#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           2015
category:            Unknown
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Options
  build-depends:       ansi-wl-pprint
                     , async
                     , base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , foldl
                     , monad-logger
                     , optparse-applicative
                     , pipes-group
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall

executable reve-test-suite
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       ansi-wl-pprint
                     , async
                     , base
                     , containers
                     , directory
                     , extra
                     , filepath
                     , foldl
                     , lens
                     , monad-logger
                     , optparse-applicative
                     , pipes
                     , pipes-concurrency
                     , pipes-files
                     , pipes-group
                     , pipes-safe
                     , pipes-shell
                     , pipes-text
                     , process
                     , reve-test-suite
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall
