name:                smt-conv
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/cocreature/smt-conv#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           2015
category:            Unknown
build-type:          Simple
cabal-version:       >=1.10

executable smt-conv
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bound >= 1.0 && < 1.1
                     , monad-gen >= 0.3 && < 0.4
                     , mtl >= 2.2 && < 2.3
                     , optparse-applicative >= 0.12 && < 0.13
                     , parsers >= 0.12 && < 0.13
                     , prelude-extras >= 0.4 && < 0.5
                     , pretty >= 1.1 && < 1.2
                     , process >= 1.2 && < 1.3
                     , text >= 1.2 && < 1.3
                     , trifecta >= 1.5 && < 1.6
  ghc-options:         -Wall
  other-modules:       AST
                     , Parser
                     , Simplify