name:                shake-reve
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/cocreature/shake#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           2015
category:            Unknown
build-type:          Simple
cabal-version:       >=1.10

executable shake-reve
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.6
                     , deepseq >= 1.4 && < 1.5
                     , hashable >= 1.2 && < 1.3
                     , process >= 1.2 && < 1.3
                     , shake >= 0.15 && < 0.16
  ghc-options:         -rtsopts -with-rtsopts=-I0 -threaded